--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="serverip">192.168.1.4</string>
+ <!--   <string name="serverip">192.168.1.3</string> -->
     <string name="facebook_app_id">1758142487814095</string>
     <string name="fb_login_protocol_scheme">fb1502334353182523</string>
 
